[package]
name = "wasm-tokio"
version = "0.3.0"
description = "Streaming WebAssembly codec based on Tokio"

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[workspace]
members = ["leb128-tokio", "utf8-tokio"]

[workspace.package]
authors = ["Roman Volosatovs <rvolosatovs@riseup.net>"]
categories = ["wasm"]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/wrpc/wasm-tokio"

[features]
default = ["tracing"]
tracing = ["dep:tracing", "leb128-tokio/tracing"]

[workspace.dependencies]
leb128-tokio = { version = "0.1", path = "./leb128-tokio", default-features = false }
tokio = { version = "1", default-features = false }
tokio-util = { version = "0.7", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
utf8-tokio = { version = "0.1", path = "./utf8-tokio", default-features = false }

[dependencies]
leb128-tokio = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true, features = ["attributes"], optional = true }
utf8-tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }
